adding moving background

--- a/client/src/pages/landing.css
+++ b/client/src/pages/landing.css
@@ -1,10 +1,16 @@
-body {
-    background-image: url(https://res.cloudinary.com/delacue/image/upload/c_scale,w_1497/v1567529037/RTHbackgroundLarge_wofnlp.jpg);
-    background-size: cover;
+/* body {
+ background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+} */
+.videoTag {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    float: left; 
+    top: 0;
+    padding: none;
 }
-
 button {
     margin-right: 20px;
 }
