--- a/client/src/components/signUp.css
+++ b/client/src/components/signUp.css
@@ -1,6 +1,17 @@
 #billboard {
-    background-image: url(https://res.cloudinary.com/delacue/image/upload/v1567553396/image_3_ln60x1.png);
+    /* background-image: url(https://res.cloudinary.com/delacue/image/upload/v1567553396/image_3_ln60x1.png); */
     height: 100%;
     width: 100%;
-    padding: 40px;
+    padding: 15px;
+    background-color: #267F44;
+    border: 6px solid white;
+    border-radius: 7px;
+    margin-top: 30px;
+}
+
+img {
+    height: 140px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
