--- a/client/src/pages/landing.css
+++ b/client/src/pages/landing.css
@@ -6,12 +6,15 @@
 .videoTag {
     height: auto;
     width: 100%;
-    /* z-index: 0; */
     position: fixed;
     float: left; 
     top: 0;
-    padding: none;
 }
 button {
     margin-right: 20px;
+    display: inline-block;
+    margin-left: auto;
+    /* margin-right: auto; */
+    text-align: center;
+    
 }
