--- a/client/src/pages/landing.css
+++ b/client/src/pages/landing.css
@@ -14,7 +14,7 @@ button {
     margin-right: 20px;
     display: inline-block;
     margin-left: auto;
-    /* margin-right: auto; */
+    margin-top: 15px;
     text-align: center;
     
 }
