--- a/client/src/components/signUp.css
+++ b/client/src/components/signUp.css
@@ -1,12 +1,11 @@
 #billboard {
-    /* background-image: url(https://res.cloudinary.com/delacue/image/upload/v1567553396/image_3_ln60x1.png); */
-    height: 100%;
-    width: 100%;
-    padding: 15px;
-    background-color: #267F44;
-    border: 6px solid white;
-    border-radius: 7px;
-    margin-top: 30px;
+    background-image: url(https://res.cloudinary.com/delacue/image/upload/v1567614838/greenSign-_Converted_ja975n.png);
+    margin-top: 0px;
+    background-size: 100% 100%;
+    padding: 8%;
+    background-repeat: no-repeat;
+    
+
 }
 
 img {
