--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -8,6 +8,15 @@
     text-align: center;
     
 }
+h1{
+    color: white;
+    border: solid white 2px;
+    border-radius: 25px;
+    font-size: 60px;
+}
+.border{
+    border: solid white 2px;
+}
 .title {
     color: white;
     font-size: 25px;
