number of stops commented out

--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -58,3 +58,7 @@ h1{
     border: solid white 2px;
     border-radius: 25px;
 }
+/* #exampleStops{
+    border: solid white 2px;
+    border-radius: 25px;
+} */
