--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -51,27 +51,28 @@ html, body {
   letter-spacing: 4px;
   text-align: center;
 }
+
 .menu-item.active {
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.7);
+    background-color: #53AC5F;
 }
 .menu-item:nth-of-type(1) {
-  background: #f39c12;
+  background: #52AA5E;
 }
 .menu-item:nth-of-type(2) {
-  background: #e08e0b;
+  background: #458A4F;
 }
 .menu-item:nth-of-type(3) {
-  background: #c87f0a;
+  background:  #3E7847;
 }
 .menu-item:nth-of-type(4) {
-  background: #b06f09;
+  background:  #35603D;
 }
 .menu-item:nth-of-type(5) {
-  background: #976008;
+  background:  #2B4732;
 }
 
 .menu-item--active {
-  background: #f39c12;
+  background: #7FFB88;
   border-radius: 2px !important;
   box-shadow: 0 0px 50px rgba(0, 0, 0, 0.5);
   left: 50%;
