--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -72,7 +72,7 @@ html, body {
 }
 
 .menu-item--active {
-  background: #7FFB88;
+  background: rgb(243, 20, 20);
   border-radius: 2px !important;
   box-shadow: 0 0px 50px rgba(0, 0, 0, 0.5);
   left: 50%;
