--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -6,6 +6,7 @@
     border-radius: 25px;
     font-family: 'Overpass', sans-serif;
     text-align: center;
+    max-width: 400px;
     
 }
 h1{
@@ -34,7 +35,7 @@ h1{
     margin-bottom: 20px;
 
 }
-#exampleTrip{
+#exampleTrip, #exampleStart, #exampleCity, #exampleState, #exampleZip, #exampleEnd, #exampleEndCity, #exampleEndState, #exampleEndZip{
     border: solid white 2px;
     border-radius: 25px;
 }
