--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,5 @@
-body{
-    margin: 0px;
-    width: 100vw;
-    height: 100vh;
-}
-
-#root{
-    height: 100%;
-}
-
-.map{
-    height: 100%;
-}
-
-.message-form{
-    z-index: 999;
-    position: absolute;
-    top:10px;
-    right:10px;
-}
+.leaflet-container {
+    height: 400px;
+    width: 100%;
+  }
+  
