--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -72,7 +72,7 @@ h1{
     border-radius: 25px;
 }
 
-/* #exampleStops{
+#exampleStops{
     border: solid white 2px;
     border-radius: 25px;
-} */
+}
