--- a/client/src/components/Forms/Forms.css
+++ b/client/src/components/Forms/Forms.css
@@ -1,6 +1,6 @@
 .tripInput{
-    background-color: #388e3c;
-    margin-top: 100px;
+    background-color: #15561e;
+    margin-top: 10px;
     padding: 20px 20px 10px 20px;
     border: solid #263238 2px;
     border-radius: 25px;
