--- a/client/src/pages/landing.css
+++ b/client/src/pages/landing.css
@@ -11,12 +11,18 @@ body {
     float: left; 
     top: 0;
 }
-button {
+.btn-success {
     margin-right: 20px;
-    display: inline-block;
     margin-left: auto;
     margin-top: 30px;
     text-align: center;
+    background-color: #263238 !important;
+    padding: 10px 10px 10px 10px;
+    font-size: 20px;
+    border: solid white 2px;
+    border-radius: 25px;
+    text-shadow: 2px 2px 4px #000000;
+    margin-bottom: 20px;
     /* border-top: 20px; */
     
 }
