--- a/client/src/pages/landing.css
+++ b/client/src/pages/landing.css
@@ -14,7 +14,7 @@ body {
 .btn-success {
     margin-right: 20px;
     margin-left: auto;
-    margin-top: 30px;
+    margin-top: 10px;
     text-align: center;
     background-color: #263238 !important;
     padding: 10px 10px 10px 10px;
@@ -22,7 +22,12 @@ body {
     border: solid white 2px;
     border-radius: 25px;
     text-shadow: 2px 2px 4px #000000;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     /* border-top: 20px; */
     
+}
+
+.billboard, #billboard {
+    max-height: 400px;
+    border-radius: 25px;
 }
