--- a/client/src/pages/planner.css
+++ b/client/src/pages/planner.css
@@ -19,7 +19,7 @@ body {
 
 .card-header {
     background: #15561e;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Merriweather', serif;
     font-size: 20px;
     color: white;
     text-shadow: 1px 1px 2px #000000;
